Fix card word wrap, remove column expand / contract animation.

--- a/RailsApp/app/assets/stylesheets/posts.css.scss
+++ b/RailsApp/app/assets/stylesheets/posts.css.scss
@@ -13,5 +13,6 @@
     border-top: 1px solid lightgray;
   }
   margin-bottom: 100px;
+  word-wrap: break-word;
 }
 
